Stacking problem solved, setting header to z-index: 1020

--- a/portafolio-website/src/assets/css/_base.scss
+++ b/portafolio-website/src/assets/css/_base.scss
@@ -17,4 +17,5 @@ svg {
 
 .column {
   padding: 0;
+  position: relative;
 }
