--- a/portafolio-website/src/assets/css/_header.scss
+++ b/portafolio-website/src/assets/css/_header.scss
@@ -2,8 +2,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 30px 10px;
-  // background-color: #fff;
-  box-shadow: 0px 1px 5px #000;
+  background-color: #fff;
+  position: relative;
+  z-index: 1020;
 }
 
 .brand {
@@ -26,7 +27,8 @@
     margin: 0px 15px;
     color: #000 !important;
     font-size: 1em;
-    font-family: $pt-sans, sans-serif;
+    font-family: $pt-sans;
+    position: relative;
   }
 }
 
@@ -36,20 +38,17 @@
 
   &:hover {
     .dropdown__options {
-      height: auto;
+      visibility: visible;
     }
   }
 
   .dropdown__options {
-    z-index: 1;
-    height: 0;
-    overflow: hidden;
+    visibility: hidden;
     position: absolute;
     top: 100%;
     left: 0;
     min-width: 12.5em;
-    padding-top: 30px;
-    transition: .3s all linear;
+    padding-top: 20px;
     color: rgb(65, 59, 59);
 
     .dropdown__option {
