--- a/portafolio-website/src/assets/css/_main.scss
+++ b/portafolio-website/src/assets/css/_main.scss
@@ -5,7 +5,7 @@
 
 // Home vue
 .banner {
-  position: relative;
+  // position: relative;
   width: 100%;
   height: 600px;
   background: url('../images/banner.jpg') center no-repeat;
@@ -15,23 +15,20 @@
   align-items: center;
 
   &::before {
+    position: absolute;
     display: block;
     content: '';
     width: 100%;
     height: 100%;
     background-color: rgba(#000, 0.6);
-    position: absolute;
   }
 
   .banner__text {
-    cursor: pointer;
     position: relative;
-    text-align: center;
-    background-color: rgba(#000, .8);
+    border: 2px solid #ddd;
+    padding: 20px 40px;
     color: #ddd;
-    margin: auto;
-    padding: 10px 40px;
-    border: 1px solid #ddd;
+    text-align: center;
 
     .banner__text-title {
       font-size: 1.8em;
