--- a/portafolio-website/src/assets/css/_vars.scss
+++ b/portafolio-website/src/assets/css/_vars.scss
@@ -14,4 +14,4 @@ $secondary-bgc: #ddd;
 $font-size: 16px;
 
 
-$pt-sans: 'PT Sans';
+$pt-sans: 'PT Sans', sans-serif;
